# clothesapp

./: .gitignore  Cargo.toml  README.md
src/: di.rs  lib.rs  main.rs
src/api/: mod.rs  routes.rs
src/api/handlers/: outfit_handlers.rs  pants_handlers.rs  shirt_handlers.rs
src/application/: mod.rs  outfit_read_service.rs  outfit_service.rs  outfit_write_service.rs  pants_read_service.rs  pants_service.rs  pants_write_service.rs  shirt_read_service.rs  shirt_service.rs  shirt_write_service.rs
src/domain/entities/: mod.rs  outfit.rs  pants.rs  price.rs  shirt.rs
src/domain/repositories/: mod.rs  outfit_repository.rs  pants_repository.rs  shirt_repository.rs
src/infrastructure/: mod.rs  seed.rs
src/infrastructure/http/: dto.rs  routes.rs
src/infrastructure/http/handlers/: mod.rs  outfit_handlers.rs  pants_handlers.rs  shirt_handlers.rs
src/infrastructure/persistence/: in_memory_outfit_repository.rs  in_memory_pants_repository.rs  in_memory_shirt_repository.rs  mod.rs
tests/domain/: mod.rs  outfit_tests.rs  pants_tests.rs  price_tests.rs  shirt_tests.rs
tests/domain/object_mothers/: mod.rs  outfit_mother.rs  pants_mother.rs  price_mother.rs  shirt_mother.rs
